[package]
name = "anchr"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
openssl = "0.10"
quinn = { version = "0.11", features = ["rustls"] }
tokio = { version = "1", features = ["full"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.1.0"
uuid = { version = "1.0", features = ["v4"] }