[package]
name = "anchr"
version = "0.13.2"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
openssl = "0.10"
quinn = { version = "0.11", features = ["rustls"] }
tokio = { version = "1", features = ["full"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.1.0"
uuid = { version = "1.0", features = ["v4"] }
pnet = "0.35"
rand = "0.9"
lazy_static = "1.4.0"
ratatui = { version = "0.29", features = ["all-widgets"] }
crossterm = "0.29"
log = "0.4.21"
tui-logger = "0.17"