[package]
name = "anchr"
version = "0.13.2"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
openssl = "0.10"
quinn = { version = "0.11", features = ["rustls"] }
tokio = { version = "1", features = ["full"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.2.0"
uuid = { version = "1.17", features = ["v4"] }
pnet = "0.35"
rand = "0.9"
lazy_static = "1.5.0"
ratatui = { version = "0.29", features = ["all-widgets"] }
crossterm = "0.29"
log = "0.4.27"
tui-logger = "0.17"
regex = "1"
sha2 = "0.10"